<resources>
    <string name="app_name">Martynov</string>
    <string name="name">Имя:</string>
    <string name="signIn">Войти</string>
    <string name="login">Логин:</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль:</string>
    <string name="new_loan">Новая заявка</string>
    <string name="button_new_loan">Создать новую заявку</string>
    <string name="history">История</string>
    <string name="update_history">Обновление истории</string>
    <string name="menu">Меню</string>
    <string name="open_detail_loan">Открытие деталей заявки</string>
    <string name="detail">Детали</string>
    <string name="create_new_loan">Создание новой заявки</string>
    <string name="conditions">Условия</string>
    <string name="fill_fields">Заполнение полей</string>
    <string name="success_loan">Успешная заявка</string>
    <string name="end">Конец</string>
    <string name="amount_instruction">30000</string>
    <string name="period_instruction">45</string>
    <string name="percent_instruction">10.5</string>
    <string name="max_amount">Максимальная сумма:</string>
    <string name="percent">Процент:</string>
    <string name="period">Период:</string>
    <string name="pointer">Указатель</string>
    <string name="smile">Улыбка</string>
    <string name="sent">Отправленно:</string>
    <string name="last_name">Фамилия:</string>
    <string name="state">Статус:</string>
    <string name="amount">Сумма:</string>
    <string name="phone_number">Телефон:</string>
    <string name="online_on_card">2) Онлайн на карту.</string>
    <string name="get_loan">Вы можете получить займ:</string>
    <string name="in_bank">1) Обратившись в отделение банка;</string>
    <string name="amount_example">15000</string>
    <string name="name_example">Иван</string>
    <string name="last_name_example">Иванов</string>
    <string name="percent_example">5.6</string>
    <string name="period_example">10</string>
    <string name="phone_number_example">+88005553535</string>
    <string name="update">Обновить</string>
    <string name="instruction">Инструкция</string>
    <string name="exit">Выйти</string>
</resources>